k8s/05-deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: ${APP_SLUG}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: ${DO_REGISTRY_URL}/${APP_SLUG}-web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
