k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APP_SLUG}-web
  namespace: ${APP_SLUG}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${APP_SLUG}-web
  template:
    metadata:
      labels:
        app: ${APP_SLUG}-web
    spec:
      containers:
        - name: web
          image: ${DO_REGISTRY_URL}/${APP_SLUG}-web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APP_SLUG}-api
  namespace: ${APP_SLUG}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${APP_SLUG}-api
  template:
    metadata:
      labels:
        app: ${APP_SLUG}-api
    spec:
      containers:
        - name: api
          image: ${DO_REGISTRY_URL}/${APP_SLUG}-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
