k8s/04-service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: ${APP_SLUG}
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
