k8s/06-service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: ${APP_SLUG}
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
