k8s/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: synapse
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "synapse.shtrial.com"
    - "api-synapse.shtrial.com"
    secretName: wildcard-shtrial-tls
  rules:
  - host: "synapse.shtrial.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
  - host: "api-synapse.shtrial.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: synapse-backend
            port:
              number: 80
